--- a/LinkedListIterator/LinkedListIterator/LinkedListIterator.vcxproj.filters
+++ b/LinkedListIterator/LinkedListIterator/LinkedListIterator.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="AbsIterator.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="LinkedList.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbsIterator.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
